--- a/NottyApp/templates/flash.html
+++ b/NottyApp/templates/flash.html
@@ -16,7 +16,7 @@
 
 
 
-    <meta http-equiv="refresh" content= "0.6 ; url=/sht">
+    <meta http-equiv="refresh" content= "1.2 ; url=/sht">
     <!--<link rel="stylesheet" href="{% static 'css/flash.css' %}">-->
 
 </head>
@@ -40,12 +40,13 @@
           left: 0;
           top: -60%;
           -webkit-animation-name: slideUp;
+          -webkit-animation-start: 0.8s;
           -webkit-animation-duration: 0.8s;
           -webkit-animation-timing-function: linear;
         }
 
                   
-        @keyframes slideUp {
+        @-webkit-keyframes slideUp {
           
           0%   { top: 0%; }
           25%   { top: -40%;}
