change-button-align

--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -192,6 +192,7 @@
           position: absolute;
           width: 100%;
           z-index: -1;
+          left: 0;
 
 
       }
@@ -423,7 +424,7 @@
         align-items: center;
         justify-content: center;
         top: -274rem;
-        left: -13rem;
+        left: 5rem;
         z-index: 1;
         box-shadow:0 2px 10px -5px black;
       }
