--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -262,7 +262,7 @@
 
 
       .form {
-          margin: 20rem;
+          margin: auto;
           /* height: fit-content; */
           /* margin-bottom: 65rem; */
           padding: 0;
@@ -342,24 +342,18 @@
 
 
       .inputText1, .inputText2 {
-        flex-direction: column;
         border-radius: 20px;
-        margin: 0 auto;
         margin-bottom: 25rem;
 
         background-color: #ebebeb;
-        border: 0;
+        border: none;
         width: 88vw;
         height: 60rem;
-        line-height: 60rem;
         color: #000;
         font-size: 25rem;
         text-align: center;
 
         position: relative;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, 0);
 
         box-shadow:0 2px 10px -5px black;
 
@@ -410,6 +404,8 @@
 
         width: 12vw;
         height: 12vw;
+
+        margin-left: 10rem;
 
         padding: 0;
         display: flex;
