--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -402,6 +402,9 @@
 
       .chan {
 
+
+
+
         width: 12vw;
         height: 12vw;
 
@@ -410,7 +413,7 @@
         padding: 0;
         display: flex;
         background-color: #EB6200;
-
+        outline: none;
         border: none;
         border-radius: 20px;
         font-size: 30rem;
@@ -418,13 +421,17 @@
         position: relative;
         align-items: center;
         justify-content: center;
-        top: -274rem;
+        top: -276rem;
         left: 5rem;
         z-index: 1;
         box-shadow:0 2px 10px -5px black;
       }
 
-
+      chan:visited { text-decoration: none; }
+      chan:hover { text-decoration: none; }
+      chan:focus { text-decoration: none; }
+      chan:hover, a:active { text-decoration: none; }
+      
     </style>
     
 
