--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -402,8 +402,8 @@
 
       .chan {
 
-
-
+        color: #fff;
+        
 
         width: 12vw;
         height: 12vw;
@@ -421,16 +421,12 @@
         position: relative;
         align-items: center;
         justify-content: center;
-        top: -276rem;
+        top: -280rem;
         left: 5rem;
         z-index: 1;
         box-shadow:0 2px 10px -5px black;
       }
 
-      chan:visited { text-decoration: none; }
-      chan:hover { text-decoration: none; }
-      chan:focus { text-decoration: none; }
-      chan:hover, a:active { text-decoration: none; }
       
     </style>
     
