redesign sht.html

--- a/NottyApp/templates/flash.html
+++ b/NottyApp/templates/flash.html
@@ -26,6 +26,10 @@
         <div class="spin"></div>
     </div>
       <style>
+        html {
+          background-color: #F9F9F9;
+        }
+
 
         body::-webkit-scrollbar {
           display:none /* Chrome , Safari , Opera */
