--- a/NottyApp/templates/arrive.html
+++ b/NottyApp/templates/arrive.html
@@ -1,3 +1,163 @@
-도착역에 도착 했습니다.
-<br>
-<a href='/'>홈화면</a>
+{%load static%}
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css?ver1">
+
+    <title>Notty</title>
+
+
+    
+</head>
+    <body>
+        
+        <div class="msg_box">
+            <p class="arrive_msg">
+                🚇 도착역에 도착 했습니다. 🚇
+            </p>
+        </div>
+        <div class="box">
+            <a href='/' class="home_link">🏠︎</a>
+        </div>
+
+
+        <style>
+
+            html{
+                width: 100%;
+                height: 100%;
+
+            }
+            body {
+                width: 100%;
+                height: 80%;
+                background-color: #F9F9F9;
+                font-family: 'MICEGothic';
+            }
+
+            .msg_box{
+                width: 90%;
+                height: 10%;
+                margin-top: 30%;
+                margin-left: auto;
+                margin-right: auto;
+                margin-bottom: 10%;
+                padding: 5px;
+
+                background: linear-gradient( to right, #F53803, #F5D020 );
+                border-radius: 20px;
+                box-shadow: 0 2px 10px black;
+            }
+
+            .arrive_msg{
+
+                text-align: center;
+                margin: auto;
+                margin-top: 16px;
+                padding: 0;
+
+
+                width: 80%;
+
+                font-style: bold;
+                font-size: 23px;
+                color: white;
+                text-shadow: 0px 0px 5px black;
+            }
+            .box{
+                background-color: #F9F9F9;
+                margin-top: 20%;
+                margin-left: auto;
+                margin-right: auto;
+
+
+                width: 50px;
+                height: 50px;
+            }
+            .home_link{
+
+
+                padding: 0;
+
+                font-size: 60px;
+                -webkit-animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) infinite;
+                animation: text-focus-in 3s cubic-bezier(0.550, 0.085, 0.680, 0.530) infinite;
+                -webkit-animation-start: 0.5s;
+                -webkit-animation-timing-function: linear;
+            }
+
+                        
+            @-webkit-keyframes breathe {
+                transition: 1s;
+
+                transform-origin: center center;
+                0%   {                 
+                    transform-origin: center center;
+                    font-size: 20px; 
+                }
+                50%   {                 
+                    transform-origin: center center;
+                    font-size: 50px; 
+                }
+                100%    { 
+                    transform-origin: center center;
+                    font-size: 20px; 
+                }
+            } 
+
+@-webkit-keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    30% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
+      }
+    70% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
+      }
+    100% {
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
+      }
+  }
+  @keyframes text-focus-in {
+    0% {
+      -webkit-filter: blur(12px);
+              filter: blur(12px);
+      opacity: 0;
+    }
+    30% {
+      -webkit-filter: blur(0px);
+              filter: blur(0px);
+      opacity: 1;
+    }
+    70% {
+        -webkit-filter: blur(0px);
+                filter: blur(0px);
+        opacity: 1;
+      }
+    100% {
+        -webkit-filter: blur(12px);
+                filter: blur(12px);
+        opacity: 0;
+      }
+  }
+  
+
+            
+        </style>
+    </body>
+
+</html>
