sht_detail.html ReDesign

--- a/NottyApp/templates/home.html
+++ b/NottyApp/templates/home.html
@@ -122,6 +122,7 @@
     <div class="margin">
       <div class="form">
         <form action="" method="POST">
+            {% csrf_token %}
 
             <table class="station">
               <!-- {{ form.as_table }} -->
