--- a/NottyApp/templates/sht.html
+++ b/NottyApp/templates/sht.html
@@ -325,7 +325,7 @@
             font-family: 'MICEGothic';
             width: 100vw;
             height: 100vh;
-            background-color:#9F9F9F;
+            background-color:#F9F9F9;
             padding: 0;
             margin: 0;
         }
